--- a/08-aug-21/04-08/package.json
+++ b/08-aug-21/04-08/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start ": "node src/index.js",
+    "start": "node src/index.js",
     "deploy": "chmod +x src/index.js && npm link",
-    "undeploy": "nmp unlink"
+    "undeploy": "npm unlink"
   },
   "author": "",
   "license": "ISC",
