--- a/08-aug-21/25-08/package.json
+++ b/08-aug-21/25-08/package.json
@@ -1,8 +1,15 @@
 {
+  "name": "25-08",
+  "version": "1.0.0",
+  "description": "",
+  "main": "sever.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
